<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="40dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/thank_you"
        android:textSize="44dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/holo_orange_dark" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:drawableLeft="@drawable/bullet"
            android:drawablePadding="8dp"
            android:ems="13"
            android:text="@string/signoff_reminder"
            android:textSize="34dp" />
    </LinearLayout>

    <Button
        android:id="@+id/last_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@android:color/holo_red_dark"
        android:onClick="routeFinish"
        android:padding="23dp"
        android:text="@string/complete_day"
        android:textColor="@android:color/white"
        android:textSize="40dp"
android:visibility="gone"		/>

</LinearLayout>