<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="40dp" >

    <TextView
        android:id="@+id/new_stop_name_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/weight_name"
        android:textSize="34dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginTop="24dp"
        android:background="#FFFF0000" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/new_stop_type_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:drawableLeft="@drawable/bullet"
            android:drawablePadding="8dp"
            android:ems="8"
            android:textSize="24dp" />
<!--
        <TextView
            android:id="@+id/new_stop_weight_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/bullet"
            android:drawablePadding="8dp"
            android:ems="8"
            android:textSize="24dp" />
			-->
			
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/new_stop_dialog_question"
        android:textSize="26dp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dialog_deny"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_stop_dialog_no"
            android:textSize="24dp" />

        <Button
            android:id="@+id/dialog_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_stop_dialog_yes"
            android:textSize="24dp" />
    </LinearLayout>

</LinearLayout>